@@ -207,6 +207,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Smalltalk              Bananeweizen
 - Smarty                 Alan Juden
 - SPARK                  Phil Thornley
+- SPARQL                 Karima Rafes
 - StoneScript            Archimmersion
 - SystemVerilog          Sean O'Boyle
 - TCL                    Reid van Melle
