@@ -23,6 +23,7 @@ Version 1.0.8.11
      * PARI/GP (Charles R Greathouse IV)
      * Rexx (Jon Wolfers)
      * SPARK (Phil Thornley)
+     * SPARQL (Karima Rafes)
      * StoneScript (Archimmersion)
      * UPC (Viraj Sinha)
      * Urbi (Alexandre Morgand)
